# tlsh

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
evaluation/: Cargo.toml
evaluation/analysis/: analysis.py
evaluation/metasploit/: gen_payloads.py
evaluation/results/: comparisons.csv  distinct_hashes.csv  linux_bins.csv  pg1342.csv  pg1342_500.csv  similar_hashes.csv
evaluation/src/: alter_files.rs  collect_hashes.rs  comparisons.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reference_tlsh.rs
src/: lib.rs  tlsh.rs  util.rs
test/data/: test.txt
