[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
indicatif = "0.17.1"    # Used for progress bars
rand = "0.8.5"
ssdeep = "0.2.0"
tlsh = { path="../" }

# Optimize the local TLSH package so we can run much faster
[profile.dev.package.tlsh]
opt-level = 3
